--- a/style.css
+++ b/style.css
@@ -10,7 +10,8 @@
 
 .button {
   background-color: var(--accent);
-  color: black;
+  color: white;
+  font-weight: bold;
   text-decoration: none;
   width: 150px;
   height: 100px;
@@ -18,9 +19,6 @@
   margin-left: 10px;
   margin-right: 10px;
   padding: 20px;
-  box-shadow: rgba(0, 0, 0, 0.2) 0px 12px 28px 0px,
-    rgba(0, 0, 0, 0.1) 0px 2px 4px 0px,
-    rgba(255, 255, 255, 0.05) 0px 0px 0px 1px inset;
 }
 
 .button:hover {
@@ -265,4 +263,34 @@ p {
     rgba(0, 0, 0, 0.1) 0px 2px 4px 0px,
     rgba(255, 255, 255, 0.05) 0px 0px 0px 1px inset;
   border: 3px solid var(--accent);
+}
+
+@media (max-width: 900px) {
+  .yellow {
+    max-width: 100%;
+    height: 1100px;
+  }
+
+  .for-profile {
+    width: 350px;
+    height: 350px;
+    margin-bottom: 0px;
+  }
+
+  .pip-grass {
+    width: 250px;
+    height: 250px;
+    display: block;
+    margin: 0 auto;
+    margin-top: 50px;
+  }
+
+  .bio {
+    margin-top: 40px;
+    height: 500px;
+  }
+
+  .emojis {
+    margin-top: 50px;
+  }
 }
